--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>Hi, <span>I'm Team JayAbe,</span></h1>
+                    <h1>Hi, <span>I'm Azaruddin,</span></h1>
                     <h2>Welcome to our Portfolio</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur amet blanditiis, commodi repudiandae debitis hic, nobis reiciendis sit inventore esse nulla quaerat ad, tempora ullam harum optio delectus doloremque praesentium!</p>
+                    <p>Thank you very much. Let it be followed by flattery, the benefits of rejecting debts here, let us find that there is no one to be rejected, the times have chosen any of these options and the pain of the present!
+
+!</p>
                     <button class="btn btn-warning">Project</button>
                     <button class="btn btn-warning">Contact</button>
                 </div>
