--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <button class="btn btn-warning">Contact</button>
                 </div>
                 <div class="col-md-6">
-                    <img src="img/bg.png">
+                    <img src="WhatsApp Image 2023-11-01 at 3.59.02 PM.jpeg">
                 </div>
             </div>
         </div>
